--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -22,8 +22,8 @@
             <div id="main_content" data-role="main" class="ui-content" data-theme="a">
 
                 <h1>Welcome to Root</h1>
-                <input type="text" name="email" id="email" value="chadtimmins@gmail.com" placeholder="Email" data-clear-btn="true">
-                <input type="password" name="pass" id="pass" value="justatest" placeholder="Password" data-clear-btn="true"/>
+                <input type="text" name="email" id="email" value="" placeholder="Email" data-clear-btn="true">
+                <input type="password" name="pass" id="pass" value="" placeholder="Password" data-clear-btn="true"/>
                 <div id="login_buttons">
                     <input type="submit" id="login" value="Login" data-inline="true"/>
                     <input type="submit" id="new_user" value="New User" data-inline="true"/>
