Added User Account Details

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -12,7 +12,7 @@
         <title>Hello Worlds</title>
     </head>
     <body>
-        <div data-role="page" id="home">
+        <div data-role="page" id="login">
             
             <div data-role="header" data-position="fixed">
                 <a href="#navpanel" class="ui-btn ui-btn-custom-menu ui-icon-bars ui-btn-icon-left ui-nodisc-icon">
@@ -25,8 +25,8 @@
                 <input type="text" name="email" id="email" value="" placeholder="Email" data-clear-btn="true">
                 <input type="password" name="pass" id="pass" value="" placeholder="Password" data-clear-btn="true"/>
                 <div id="login_buttons">
-                    <input type="submit" id="login" value="Login" data-inline="true"/>
-                    <input type="submit" id="new_user" value="New User" data-inline="true"/>
+                    <input type="submit" id="login_button" value="Login" data-inline="true"/>
+                    <input type="submit" id="new_user_button" value="New User" data-inline="true"/>
                 </div>
             </div>
         </div>
