--- a/www/index.html
+++ b/www/index.html
@@ -12,11 +12,45 @@
         <title>Hello Worlds</title>
     </head>
     <body>
+        <div data-role="page" id="main">
+            <h1>This is a header</h1>
+        </div>
+        <!-- ____________Login Page ____________ -->
+        <div data-role="page" id="login">
+
+            <div id="main_content" data-role="main" class="ui-content" data-theme="a">
+
+                <h1>Welcome to Root</h1>
+                <input type="text" name="email" id="email" value="" placeholder="Email" data-clear-btn="true">
+                <input type="password" name="pass" id="pass" value="" placeholder="Password" data-clear-btn="true"/>
+                <div id="login_buttons">
+                    <input type="submit" id="login_button" value="Login" data-inline="true"/>
+                    <input type="submit" id="new_user_button" value="New User" data-inline="true"/>
+                </div>
+            </div>
+
+        </div>
         
+        <!-- ____________Dashboard Page ____________ -->
+        <div data-role="page" id="dashboard" data-transition="slide">
+    
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <a href="#navpanel" class="ui-btn ui-btn-custom-menu ui-icon-bars ui-btn-icon-left ui-nodisc-icon"></a>
+            </div>
+
+            <div class="ui-content" role="main">
+                <div class="ui-field-contain">
+                    <h1>Congratulations! You made it to the Dashboard!</h1>
+                </div>
+            </div>
+
+        </div>
+
 
         <script type="text/javascript" src="js/lib/jquery/jquery-1.10.1.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/account.js"></script>
 
     </body>
 </html>
