--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript" src="js/account.js"></script>
+        <script type="text/javascript" src="js/dashboard.js"></script>
 
     </body>
 </html>
