--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -25,8 +25,8 @@
                 <input type="text" name="email" id="email" value="" placeholder="Email" data-clear-btn="true">
                 <input type="password" name="pass" id="pass" value="" placeholder="Password" data-clear-btn="true"/>
                 <div id="login_buttons">
-                    <input type="submit" id="login_button" value="Login" data-inline="true"/>
-                    <input type="submit" id="new_user_button" value="New User" data-inline="true"/>
+                    <input type="submit" id="login_button" class="root-btn" value="Login" data-inline="true"/>
+                    <input type="submit" id="new_user_button" class="root-btn" value="New User" data-inline="true"/>
                 </div>
             </div>
 
