added newZone.js and modified newzone page html

--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,15 @@
             </div>
 
             <div id="new_zone_content" data-role="main" class="ui-content" data-theme="a">
+
+                <div class="ui-field-contain">
+                    <h2>Create A New Zone</h2>
+                    <input type="text" name="zone_name" id="zone_name" value="" placeholder="Enter Zone Name" data-clear-btn="true">
+                    <input type="text" name="crop_name" id="crop_name" value="" placeholder="Enter a Crop" data-clear-btn="true">
+                    <input type="text" name="new_zone_address" id="new_zone_address" value="" placeholder="Enter Address" data-clear-btn="true">
+                    <input type="submit" id="next_button" class="root-btn" value="Next" >
+                </div>
+
             </div>
 
         </div>
@@ -85,6 +94,7 @@
         <script type="text/javascript" src="js/dashboard.js"></script>
         <script type="text/javascript" src="js/zone.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
+        <script type="text/javascript" src="js/newZone.js"></script>
 
     </body>
 </html>
