--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
                 <input type="text" name="email" id="email" value="" placeholder="Email" data-clear-btn="true">
                 <input type="password" name="pass" id="pass" value="" placeholder="Password" data-clear-btn="true"/>
                 <div id="login_buttons">
-                    <input type="submit" id="login_button" class="root-btn" value="Login" data-inline="true"/>
-                    <input type="submit" id="new_user_button" class="root-btn" value="New User" data-inline="true"/>
+                    <input type="submit" id="login_button" value="Login" data-inline="true"/>
+                    <input type="submit" id="new_user_button" value="New User" data-inline="true"/>
                 </div>
             </div>
 
@@ -79,13 +79,28 @@
                     <h2>Create A New Zone</h2>
                     <input type="text" name="zone_name" id="zone_name" value="" placeholder="Enter Zone Name" data-clear-btn="true">
                     <input type="text" name="crop_name" id="crop_name" value="" placeholder="Enter a Crop" data-clear-btn="true">
-                    <input type="text" name="new_zone_address" id="new_zone_address" value="" placeholder="Enter Address" data-clear-btn="true">
-                    <input type="submit" id="next_button" class="root-btn" value="Next" >
+                    <a href="#newzone2" id="new_zone_next_button" class="ui-btn ui-corner-all root-btn">Next</a>
                 </div>
 
             </div>
 
         </div>
+
+        <!-- ____________New Zone Page 2____________ -->
+        <div data-role="page" id="newzone2" class="content_background" data-transition="slideup">
+        
+            <div data-role="header" data-position="fixed" data-theme="b">
+                <a href="javascript:history.back(1) " class="ui-btn-custom-menu ui-btn-left"><i class="fa fa-chevron-left"></i></a>
+                <a href="#navpanel" class="ui-btn-custom-menu ui-btn-right"><i class="fa fa-bars"></i></a>
+                <h1 id="new_zone_title">Add New Zone</h1>
+            </div>
+
+            <div id="new_zone_content2" data-role="main" class="ui-content" data-theme="a">
+                <div id="map_canvas" style="width: 300px; height 500px;">some stuff in the div</div>
+            </div>            
+
+        </div>
+
 
         <script type="text/javascript" src="js/lib/jquery/jquery-1.10.1.js"></script>
         <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
