Map adjusts for full size of screen.  Changed some styling for map canvas and surrounding div

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -96,7 +96,7 @@
             </div>
 
             <div id="new_zone_content2" data-role="main" class="ui-content" data-theme="a">
-                <div id="map_canvas" style="width: 300px; height 500px;">some stuff in the div</div>
+                <div id="map_canvas"></div>
             </div>            
 
         </div>
