Added start and stop features to newZone

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -95,8 +95,13 @@
                 <h1 id="new_zone_title">Add New Zone</h1>
             </div>
 
-            <div id="new_zone_content2" data-role="main" class="ui-content" data-theme="a">
-                <div id="map_canvas"></div>
+            <div id="new_zone_content2" data-role="main" class="ui-content" data-theme="a">            
+                <div id="map_canvas"></div>                
+                <div id="map_buttons" class="map-btn">
+                    <button id="track_start"type="button" class="ui-btn ui-btn-inline ui-corner-all">Start</button>
+                    <button id="track_stop" type="button" class="ui-btn ui-btn-inline ui-corner-all">Stop</button>
+                    <button id="track_reset"type="button" class="ui-btn ui-btn-inline ui-corner-all">Reset</button>
+                </div> 
             </div>            
 
         </div>
