Fixed reset button for new Zone

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -100,6 +100,7 @@
                 <div id="map_buttons" class="map-btn">
                     <button id="track_start"type="button" class="ui-btn ui-btn-inline ui-corner-all">Start</button>
                     <button id="track_stop" type="button" class="ui-btn ui-btn-inline ui-corner-all">Stop</button>
+                    <button id="track_save" type="button" class="ui-btn ui-btn-inline ui-corner-all">Save</button>
                     <button id="track_reset"type="button" class="ui-btn ui-btn-inline ui-corner-all">Reset</button>
                 </div> 
             </div>            
