Saving new zone is functioning

--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -77,8 +77,8 @@
 
                 <div class="ui-field-contain">
                     <h2>Create A New Zone</h2>
-                    <input type="text" name="zone_name" id="zone_name" value="" placeholder="Enter Zone Name" data-clear-btn="true">
-                    <input type="text" name="crop_name" id="crop_name" value="" placeholder="Enter a Crop" data-clear-btn="true">
+                    <input type="text" name="zone_name" id="zone_name" value="testzone1" placeholder="Enter Zone Name" data-clear-btn="true">
+                    <input type="text" name="crop_name" id="crop_name" value="tomatoes" placeholder="Enter a Crop" data-clear-btn="true">
                     <a href="#newzone2" id="new_zone_next_button" class="ui-btn ui-corner-all root-btn">Next</a>
                 </div>
 
