--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
         <div data-role="page" id="newzone2" class="content_background" data-transition="slideup">
         
             <div data-role="header" data-position="fixed" data-theme="b">
-                <a href="javascript:history.back(1) " class="ui-btn-custom-menu ui-btn-left"><i class="fa fa-chevron-left"></i></a>
+                <a href="javascript:history.back(1) " id="back_button" class="ui-btn-custom-menu ui-btn-left"><i class="fa fa-chevron-left"></i></a>
                 <a href="#navpanel" class="ui-btn-custom-menu ui-btn-right"><i class="fa fa-bars"></i></a>
                 <h1 id="new_zone_title">Add New Zone</h1>
             </div>
