--- a/www/index.html
+++ b/www/index.html
@@ -100,15 +100,14 @@
                 <div id="map_buttons" class="map-btn">
                     <button id="track_start"type="button" class="ui-btn ui-btn-inline ui-corner-all">Start</button>
                     <button id="track_stop" type="button" class="ui-btn ui-btn-inline ui-corner-all">Stop</button>
-                    <button id="track_save" type="button" class="ui-btn ui-btn-inline ui-corner-all">Save</button>
-                    <button id="track_reset"type="button" class="ui-btn ui-btn-inline ui-corner-all">Reset</button>
+                    <button id="track_reset" type="button" class="ui-btn ui-btn-inline ui-corner-all">Reset</button>
                 </div> 
             </div>            
 
         </div>
 
 
-        <script type="text/javascript" src="js/lib/jquery/jquery-1.10.1.js"></script>
+        <script type="text/javascript" src="js/lib/jquery/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
