--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,7 @@
                     <h2>Create A New Zone</h2>
                     <input type="text" name="zone_name" id="zone_name" value="" placeholder="Enter Zone Name" data-clear-btn="true">
                     <input type="text" name="crop_name" id="crop_name" value="" placeholder="Enter a Crop" data-clear-btn="true">
-                    <a href="#newzone2" id="new_zone_next_button" class="ui-btn ui-corner-all root-btn">Next</a>
+                    <a href="#newzone2"><button id="new_zone_next_button" class="ui-btn ui-corner-all root-btn">Next</button></a>
                 </div>
 
             </div>
